# Stochastic_Slope_Simulator

./: .dockerignore  .gitignore  README.md
dashboard/: Dockerfile  app.py
fem_solver/: CMakeLists.txt  Dockerfile
fem_solver/src/: main.cpp  slope_stability.cpp  slope_stability.h
gis_fetcher/: Dockerfile  fetch_soil.py  fetch_terrain.py  fetch_weather.py  inspect_terrain.py  requirements.txt
shared_data/: live_data.json  results.csv  soil_composition.json  stochastic_trials.csv
stochastic_manager/: Dockerfile  requirements.txt
stochastic_manager/src/: monte_carlo.py
